# rss_creator

./: .gitignore  Cargo.toml  README.md
src/: cast.rs  channel.rs  feed.rs  lib.rs  main.rs  rss.rs
