[package]
name = "rss_create"
version = "0.1.0"
authors = ["Thom Bogers <thom.bogers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.8.0"
serde_json = "1.0.40"
serde = { version = "1.0", features = ["derive"] }
